tests/neg/semantic_void_var_decl.baa
// EXPECT: لا يمكن تعريف متغير
عدم س.
